# ESP32-C6-Graduation-Firmware

./: .gitignore
.claude/: launch.json
ESP32-C6-Touch-AMOLED-1.43-Demo/.claude/: launch.json
ESP32-C6-Touch-AMOLED-1.43-Demo/ESP-IDF/: ReadMe.txt
RotaryEncoder/ESP32RotaryEncoder-main/: README.md  library.json  library.properties
Squarelinetest/: CMakeLists.txt  filelist.txt  project.info  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
Squarelinetest/components/: ui_comp.c  ui_comp.h  ui_comp_batterygroup.c  ui_comp_batterygroup.h  ui_comp_buttondown.c  ui_comp_buttondown.h  ui_comp_buttonround.c  ui_comp_buttonround.h  ui_comp_buttontop.c  ui_comp_buttontop.h  ui_comp_dailymissiongroup.c  ui_comp_dailymissiongroup.h  ui_comp_dategroup.c  ui_comp_dategroup.h  ui_comp_forecastgroup.c  (+13 more)
waveshare_squareline_studio/ESP-IDF/main/: CMakeLists.txt  main.c  waveshare_rgb_lcd_port.c  waveshare_rgb_lcd_port.h
waveshare_squareline_studio/ESP-IDF/main/ui/: filelist.txt  ui.c  ui.h  ui_helpers.c
waveshare_squareline_studio/ESP-IDF/main/ui/images/: ui_img_arrow_left_png.c  ui_img_arrow_right_png.c  ui_img_btn_main_off_png.c  ui_img_btn_pad_top_png.c  ui_img_btn_print_top_off_png.c  ui_img_btn_setting_png.c  ui_img_btn_z_botton_png.c  ui_img_btn_z_top_png.c  ui_img_icn_bed_png.c  ui_img_icn_time_1_png.c  ui_img_icn_wifi_png.c  ui_img_indicator_ver_png.c  ui_img_pot_hor_knob_png.c  ui_img_pot_hor_line_png.c  ui_img_pot_ver_line_png.c  ui_img_print_view_bg_png.c
waveshare_squareline_studio/ESP-IDF/main/ui/screens/: ui_Screen_1_Print.c  ui_Screen_3_Setting.c
(+281 files in other folders)
